Details
-
Bug
-
Status: Closed
-
P3: Somewhat important
-
Resolution: Done
-
5.0.0, 5.0.1, 5.0.2, 5.1.0 Beta 1
-
None
-
Windows 8
-
Message box fix: 7ead3a39c71949e28d682f893f8b4037e25d7259
Description
I have tried both of the Qt 5 pre-compiled downloads for MSVC2010. Angle and OpenGL. The designer and any other Qt application crashes immediately.
I have tested on a few Windows 8 systems including a VMWare emulator.
My own applications also crash immediately. Those built with MinGW seem to work fine.
Attachments
Issue Links
- relates to
-
QTBUG-34274 Deployment documentation does not make it clear about the platform plugin deployment
-
- Closed
-
-
QTBUG-28766 Qt5 Deploy on Windows
-
- Closed
-
-
QTBUG-31760 Local path information is baked into Qt5Core.dll causing very hard to reproduce crashes
-
- Closed
-