Windows: Display a message box if platform plugin cannot be found.

Task-number: QTBUG-31765
Task-number: QTBUG-31760

Change-Id: Iadfabccf7be755564e313a8f0c128f533b9bd024
Reviewed-by: Kai Koehne <kai.koehne@digia.com>